--- a/TripGuide/Scenes/Favourites/FavoritesCollectionViewCell.xib
+++ b/TripGuide/Scenes/Favourites/FavoritesCollectionViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="gTV-IL-0wX" customClass="FavoritesCollectionViewCell" customModule="TouristGuide" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FavoritesCollectionViewCell" id="gTV-IL-0wX" customClass="FavoritesCollectionViewCell" customModule="TripGuide" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -18,6 +18,10 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ks2-n7-WFH">
                         <rect key="frame" x="10" y="10" width="140" height="140"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="140" id="Kqm-wh-h6y"/>
+                            <constraint firstAttribute="width" constant="140" id="N4n-Vc-xAT"/>
+                        </constraints>
                     </imageView>
                 </subviews>
             </view>
