--- a/TripGuide/Scenes/TabBar/Main.storyboard
+++ b/TripGuide/Scenes/TabBar/Main.storyboard
@@ -13,6 +13,7 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" itemPositioning="centered" itemSpacing="100" itemWidth="30" id="rzV-jF-iDX">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="I2F-Iw-WSb" kind="relationship" relationship="viewControllers" id="flV-um-CPU"/>
