--- a/TripGuide/Scenes/Details/HotelCollectionViewCell/HotelCollectionViewCell.xib
+++ b/TripGuide/Scenes/Details/HotelCollectionViewCell/HotelCollectionViewCell.xib
@@ -6,6 +6,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Gilroy-Bold.ttf">
+            <string>Gilroy-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -17,74 +22,57 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sUT-A5-5Xg">
-                        <rect key="frame" x="0.0" y="52" width="375" height="164"/>
+                        <rect key="frame" x="52.666666666666657" y="52" width="270" height="213"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="375" id="Lbj-Xl-KgC"/>
-                            <constraint firstAttribute="height" constant="164" id="sT9-n9-Cgc"/>
+                            <constraint firstAttribute="height" constant="213" id="hf7-xT-4Fv"/>
+                            <constraint firstAttribute="width" constant="270" id="kFF-N4-Xgr"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jfh-jf-7X2">
-                        <rect key="frame" x="10" y="226" width="355" height="24"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LocationName" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o9e-kA-aOi">
+                        <rect key="frame" x="10" y="10" width="168.66666666666666" height="32"/>
+                        <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="25"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o9e-kA-aOi">
-                        <rect key="frame" x="10" y="10" width="355" height="37"/>
-                        <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="22"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DPN-wb-pty">
-                        <rect key="frame" x="10" y="255" width="355" height="24"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="254" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ho2-pm-i2Z">
-                        <rect key="frame" x="10" y="289" width="37.333333333333336" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Vu-PR-NBH">
-                        <rect key="frame" x="288" y="280" width="74" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="74" id="JYa-s1-YWO"/>
-                            <constraint firstAttribute="height" constant="30" id="pW6-v6-y0G"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="139" translatesAutoresizingMaskIntoConstraints="NO" id="urG-HZ-Ev3">
+                        <rect key="frame" x="20" y="282" width="335" height="30"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jfh-jf-7X2">
+                                <rect key="frame" x="0.0" y="0.0" width="122" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Vu-PR-NBH">
+                                <rect key="frame" x="261" y="0.0" width="74" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="74" id="JYa-s1-YWO"/>
+                                    <constraint firstAttribute="height" constant="30" id="pW6-v6-y0G"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="Jfh-jf-7X2" secondAttribute="trailing" constant="10" id="2iV-ms-bsu"/>
-                <constraint firstItem="Jfh-jf-7X2" firstAttribute="top" secondItem="sUT-A5-5Xg" secondAttribute="bottom" constant="10" id="6t0-H0-dGT"/>
-                <constraint firstItem="sUT-A5-5Xg" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9US-fF-jz4"/>
-                <constraint firstAttribute="trailing" secondItem="sUT-A5-5Xg" secondAttribute="trailing" id="C3f-W2-eCl"/>
-                <constraint firstItem="DPN-wb-pty" firstAttribute="top" secondItem="Jfh-jf-7X2" secondAttribute="bottom" constant="5" id="EDk-CM-1Sr"/>
-                <constraint firstAttribute="trailing" secondItem="DPN-wb-pty" secondAttribute="trailing" constant="10" id="II8-9v-sfI"/>
-                <constraint firstAttribute="trailing" secondItem="3Vu-PR-NBH" secondAttribute="trailing" constant="13" id="REb-L6-faA"/>
-                <constraint firstAttribute="bottom" secondItem="3Vu-PR-NBH" secondAttribute="bottom" constant="7" id="aiJ-g2-zLi"/>
-                <constraint firstItem="ho2-pm-i2Z" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="b8S-LY-rnd"/>
-                <constraint firstItem="Jfh-jf-7X2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="b9h-sw-qBb"/>
-                <constraint firstItem="sUT-A5-5Xg" firstAttribute="top" secondItem="o9e-kA-aOi" secondAttribute="bottom" constant="5" id="l8H-gq-vOX"/>
-                <constraint firstItem="ho2-pm-i2Z" firstAttribute="top" secondItem="DPN-wb-pty" secondAttribute="bottom" constant="10" id="qe6-p9-dda"/>
+                <constraint firstAttribute="bottom" secondItem="urG-HZ-Ev3" secondAttribute="bottom" constant="5" id="1NY-TG-D0E"/>
+                <constraint firstItem="sUT-A5-5Xg" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="6Hg-RD-KQr"/>
+                <constraint firstItem="urG-HZ-Ev3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="Go1-0Y-LWz"/>
+                <constraint firstAttribute="trailing" secondItem="urG-HZ-Ev3" secondAttribute="trailing" constant="20" id="HSI-mS-d9S"/>
+                <constraint firstItem="sUT-A5-5Xg" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Nlr-PL-TQs"/>
+                <constraint firstItem="urG-HZ-Ev3" firstAttribute="top" secondItem="sUT-A5-5Xg" secondAttribute="bottom" constant="17" id="S93-xA-Ucb"/>
+                <constraint firstItem="sUT-A5-5Xg" firstAttribute="top" secondItem="o9e-kA-aOi" secondAttribute="bottom" constant="10" id="TJs-oh-Qrd"/>
                 <constraint firstItem="o9e-kA-aOi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="qu9-nE-cqQ"/>
-                <constraint firstAttribute="bottom" secondItem="ho2-pm-i2Z" secondAttribute="bottom" constant="10" id="s6O-Ee-X9F"/>
-                <constraint firstItem="DPN-wb-pty" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="uex-05-cFw"/>
-                <constraint firstAttribute="trailing" secondItem="o9e-kA-aOi" secondAttribute="trailing" constant="10" id="wcx-Vv-OEW"/>
                 <constraint firstItem="o9e-kA-aOi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="yAm-Fw-1XW"/>
             </constraints>
             <size key="customSize" width="372" height="273"/>
             <connections>
-                <outlet property="detailedLocation" destination="ho2-pm-i2Z" id="DBF-P1-rio"/>
                 <outlet property="hotelImage" destination="sUT-A5-5Xg" id="5Wx-1N-qQt"/>
                 <outlet property="hotelRate" destination="Jfh-jf-7X2" id="SLO-C0-8TD"/>
-                <outlet property="hotelsLocation" destination="DPN-wb-pty" id="opD-2b-Teh"/>
                 <outlet property="hotelsName" destination="o9e-kA-aOi" id="Llp-hl-xtA"/>
                 <outlet property="reserve" destination="3Vu-PR-NBH" id="DiU-3T-1FF"/>
             </connections>
